--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'android.zetterstrom.com.forecast:forecast:1.2.1'
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 }
